--- a/GranTurismo/sezona2025.html
+++ b/GranTurismo/sezona2025.html
@@ -15,7 +15,9 @@
   table { width:100%; border-collapse: collapse; margin-top:20px;}
   th, td { border:1px solid #444; padding:8px; text-align:center; }
   th { background:#222; }
+  input, select { padding:5px; margin:5px 0; width:100%; }
   canvas { max-width:100%; height:auto; }
+  .admin-form { max-width:600px; margin-top:20px; }
 </style>
 <!-- Firebase SDKs -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
@@ -83,6 +85,36 @@
   <h2>Admin</h2>
   <button id="loginBtn">Přihlásit se přes Google</button>
   <div id="adminBanner">Zadávání závodů</div>
+
+  <div class="admin-form">
+    <h3>Nový závod</h3>
+    <label>Datum a čas: <input type="datetime-local" id="raceDate"></label>
+    <label>Název závodu: <input type="text" id="raceName"></label>
+    <label>Trať: <input type="text" id="raceTrack"></label>
+    <label>Kategorie:
+      <select id="raceCategory">
+        <option value="Gr.1">Gr.1</option>
+        <option value="Gr.2">Gr.2</option>
+        <option value="open">open</option>
+      </select>
+    </label>
+    <label>Povolená vozidla: <input type="text" id="raceCars"></label>
+    <label>Tuning:
+      <select id="raceTuning">
+        <option value="ANO">ANO</option>
+        <option value="NE">NE</option>
+      </select>
+    </label>
+    <label>Povinný pitstop:
+      <select id="racePitstop">
+        <option value="ANO">ANO</option>
+        <option value="NE">NE</option>
+      </select>
+    </label>
+    <label>Pneumatiky: <input type="text" id="raceTyres"></label>
+    <label>Doplňující info: <input type="text" id="raceInfo"></label>
+    <button id="saveRaceBtn">Uložit nový závod</button>
+  </div>
 </section>
 
 <script>
@@ -120,22 +152,16 @@
 
   // --- DATA ---
   const drivers = ["Viki","Mára","Maty","Hardy","Ondra"];
-  const resultsData = [
-    {date:"01:03:25 20:00", race:"American Muscle", track:"Daytona road circuit", order:["Viki","Maty","Hardy","DNS","DNS"]},
-    {date:"05:03:25 20:00", race:"Limonádový Joe", track:"Red Bull Ring", order:["Viki","Hardy","Maty","DNS","DNS"]},
-    {date:"10:03:25 20:00", race:"Forza Italia", track:"Monza", order:["Hardy","Viki","Maty","DNS","DNS"]},
-    {date:"15:03:25 20:00", race:"Dovolená v Chorvatsku", track:"Dragon Trail - přímořská trať", order:["Viki","Maty","Hardy","DNS","DNS"]},
-    {date:"20:03:25 20:00", race:"Tokyo Drift", track:"Suzuka", order:["Viki","Maty","Hardy","DNS","DNS"]},
-    {date:"25:03:25 20:00", race:"Po stopách Jamese Bonda", track:"Brands Hatch", order:["Maty","Viki","Hardy","DNS","DNS"]},
-    {date:"30:03:25 20:00", race:"24h Le Mans", track:"Le Mans", order:["Viki","Hardy","Maty","DNS","DNS"]}
-  ];
   const pointsMap = [10,8,6,4,2]; //1.-5.místo
 
-  // --- VYPOČET POŘADÍ ---
+  // --- FUNKCE ---
+  let resultsData = [];
+
   function calculateStandings(){
     const standings = {};
     drivers.forEach(d=>standings[d]={points:0,podium:0,dns:0});
     resultsData.forEach(r=>{
+      if(!r.order) return;
       r.order.forEach((d,i)=>{
         if(d==="DNS"){ standings[drivers[i]].dns++; return;}
         standings[d].points += pointsMap[i] || 0;
@@ -145,17 +171,19 @@
     return Object.entries(standings).sort((a,b)=>b[1].points - a[1].points);
   }
 
-  // --- VYPSÁNÍ TABULKY ---
-  const tbodyResults = document.querySelector('#results tbody');
-  resultsData.slice().reverse().forEach(r=>{
-    const tr = document.createElement('tr');
-    tr.innerHTML = `<td>${r.date}</td><td>${r.race} / ${r.track}</td>` +
-      r.order.map(d=>`<td>${d}</td>`).join('');
-    tbodyResults.appendChild(tr);
-  });
+  function renderResults(){
+    const tbodyResults = document.querySelector('#results tbody');
+    tbodyResults.innerHTML="";
+    resultsData.slice().reverse().forEach(r=>{
+      const tr = document.createElement('tr');
+      tr.innerHTML = `<td>${r.date}</td><td>${r.race} / ${r.track}</td>` +
+        r.order.map(d=>`<td>${d}</td>`).join('');
+      tbodyResults.appendChild(tr);
+    });
+  }
 
-  const tbodyStandings = document.querySelector('#standings tbody');
   function renderStandings(){
+    const tbodyStandings = document.querySelector('#standings tbody');
     tbodyStandings.innerHTML="";
     calculateStandings().forEach(([name,data])=>{
       const tr = document.createElement('tr');
@@ -163,35 +191,54 @@
       tbodyStandings.appendChild(tr);
     });
   }
-  renderStandings();
 
-  // --- GRAF BODŮ ---
-  const ctx = document.getElementById('pointsChart').getContext('2d');
-  const datasets = drivers.map(d=>{
-    let sum=0;
-    const data = resultsData.map(r=>{
-      const idx = r.order.indexOf(d);
-      if(idx==-1 || r.order[idx]==="DNS") return sum;
-      sum += pointsMap[idx]||0;
-      return sum;
+  let pointsChart;
+  function renderChart(){
+    const ctx = document.getElementById('pointsChart').getContext('2d');
+    const datasets = drivers.map(d=>{
+      let sum=0;
+      const data = resultsData.map(r=>{
+        const idx = r.order ? r.order.indexOf(d) : -1;
+        if(idx==-1 || (r.order && r.order[idx]==="DNS")) return sum;
+        sum += pointsMap[idx]||0;
+        return sum;
+      });
+      return {label:d,data, borderColor: getRandomColor(), fill:false, tension:0.1};
     });
-    return {label:d,data, borderColor: getRandomColor(), fill:false, tension:0.1};
-  });
-
-  if(window.pointsChart instanceof Chart){
-    window.pointsChart.destroy();
+    if(pointsChart) pointsChart.destroy();
+    pointsChart = new Chart(ctx,{type:'line', data:{labels:resultsData.map(r=>r.race), datasets}, options:{responsive:true, plugins:{legend:{labels:{color:'#fff'}}}, scales:{x:{ticks:{color:'#fff'}},y:{ticks:{color:'#fff'}}}}});
   }
-  window.pointsChart = new Chart(ctx,{
-    type:'line',
-    data:{labels:resultsData.map(r=>r.race), datasets},
-    options:{
-      responsive:true,
-      plugins:{legend:{labels:{color:'#fff'}}},
-      scales:{x:{ticks:{color:'#fff'}},y:{ticks:{color:'#fff'}}}
-    }
-  });
 
   function getRandomColor(){ const letters="0123456789ABCDEF"; return "#"+Array.from({length:6}).map(()=>letters[Math.floor(Math.random()*16)]).join(''); }
+
+  // --- FIRESTORE LISTENER ---
+  db.collection("races").orderBy("date").onSnapshot(snapshot=>{
+    resultsData = [];
+    snapshot.forEach(doc=>{
+      const data = doc.data();
+      resultsData.push({...data,id:doc.id});
+    });
+    renderResults();
+    renderStandings();
+    renderChart();
+  });
+
+  // --- ADMIN: ULOŽIT NOVÝ ZÁVOD ---
+  document.getElementById('saveRaceBtn').addEventListener('click', ()=>{
+    const newRace = {
+      date: document.getElementById('raceDate').value,
+      race: document.getElementById('raceName').value,
+      track: document.getElementById('raceTrack').value,
+      category: document.getElementById('raceCategory').value,
+      cars: document.getElementById('raceCars').value,
+      tuning: document.getElementById('raceTuning').value,
+      pitstop: document.getElementById('racePitstop').value,
+      tyres: document.getElementById('raceTyres').value,
+      info: document.getElementById('raceInfo').value,
+      order: ["DNS","DNS","DNS","DNS","DNS"]
+    };
+    db.collection("races").add(newRace).then(()=>alert("Závod uložen")).catch(console.error);
+  });
 </script>
 
 </body>
