--- a/GranTurismo/sezona2025.html
+++ b/GranTurismo/sezona2025.html
@@ -16,12 +16,12 @@
   th, td { border:1px solid #444; padding:8px; text-align:center; }
   th { background:#222; }
   canvas { max-width:100%; height:auto; }
+  input, select { padding:5px; margin:2px; color:#000; }
+  button.saveBtn { margin-top:10px; padding:8px 12px; cursor:pointer; }
 </style>
-<!-- Firebase SDKs -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-<!-- Chart.js UMD -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -82,7 +82,30 @@
 <section id="admin">
   <h2>Admin</h2>
   <button id="loginBtn">Přihlásit se přes Google</button>
-  <div id="adminBanner">Zadávání závodů</div>
+  <div id="adminBanner">
+    <h3>Přidat / upravit závod</h3>
+    <div>
+      Datum a čas: <input type="datetime-local" id="raceDate"><br>
+      Název závodu: <input type="text" id="raceName"><br>
+      Trať: <input type="text" id="raceTrack"><br>
+      Kategorie: 
+      <select id="raceCategory">
+        <option>Gr.1</option><option>Gr.2</option><option>open</option>
+      </select><br>
+      Povolená vozidla: <input type="text" id="raceCars"><br>
+      Tuning: <select id="raceTuning"><option>ANO</option><option>NE</option></select><br>
+      Povinný pitstop: <select id="racePit"><option>ANO</option><option>NE</option></select><br>
+      Pneumatiky: <select id="raceTyres"><option>Soft</option><option>Medium</option><option>Hard</option></select><br>
+      YouTube odkaz: <input type="text" id="raceYT"><br>
+      Pořadí 1.–5. místo:
+      <select id="pos1"><option>Viki</option><option>Mára</option><option>Maty</option><option>Hardy</option><option>Ondra</option><option>DNS</option></select>
+      <select id="pos2"><option>Viki</option><option>Mára</option><option>Maty</option><option>Hardy</option><option>Ondra</option><option>DNS</option></select>
+      <select id="pos3"><option>Viki</option><option>Mára</option><option>Maty</option><option>Hardy</option><option>Ondra</option><option>DNS</option></select>
+      <select id="pos4"><option>Viki</option><option>Mára</option><option>Maty</option><option>Hardy</option><option>Ondra</option><option>DNS</option></select>
+      <select id="pos5"><option>Viki</option><option>Mára</option><option>Maty</option><option>Hardy</option><option>Ondra</option><option>DNS</option></select><br>
+      <button class="saveBtn" id="saveRace">Uložit závod</button>
+    </div>
+  </div>
 </section>
 
 <script>
@@ -111,6 +134,7 @@
   const auth = firebase.auth();
   const db = firebase.firestore();
 
+  // --- LOGIN ---
   document.getElementById('loginBtn').addEventListener('click', ()=>{
     const provider = new firebase.auth.GoogleAuthProvider();
     auth.signInWithPopup(provider).then(result=>{
@@ -118,78 +142,108 @@
     }).catch(console.error);
   });
 
-  // --- DATA ---
+  // --- CONSTANTS ---
   const drivers = ["Viki","Mára","Maty","Hardy","Ondra"];
-  const resultsData = [
-    {date:"01:03:25 20:00", race:"American Muscle", track:"Daytona road circuit", order:["Viki","Maty","Hardy","DNS","DNS"]},
-    {date:"05:03:25 20:00", race:"Limonádový Joe", track:"Red Bull Ring", order:["Viki","Hardy","Maty","DNS","DNS"]},
-    {date:"10:03:25 20:00", race:"Forza Italia", track:"Monza", order:["Hardy","Viki","Maty","DNS","DNS"]},
-    {date:"15:03:25 20:00", race:"Dovolená v Chorvatsku", track:"Dragon Trail - přímořská trať", order:["Viki","Maty","Hardy","DNS","DNS"]},
-    {date:"20:03:25 20:00", race:"Tokyo Drift", track:"Suzuka", order:["Viki","Maty","Hardy","DNS","DNS"]},
-    {date:"25:03:25 20:00", race:"Po stopách Jamese Bonda", track:"Brands Hatch", order:["Maty","Viki","Hardy","DNS","DNS"]},
-    {date:"30:03:25 20:00", race:"24h Le Mans", track:"Le Mans", order:["Viki","Hardy","Maty","DNS","DNS"]}
-  ];
-  const pointsMap = [10,8,6,4,2]; //1.-5.místo
+  let pointsChart;
 
-  // --- VYPOČET POŘADÍ ---
-  function calculateStandings(){
+  // --- RENDER FUNCTION ---
+  function renderAll(races){
+    // --- Calculate cumulative points ---
     const standings = {};
     drivers.forEach(d=>standings[d]={points:0,podium:0,dns:0});
-    resultsData.forEach(r=>{
-      r.order.forEach((d,i)=>{
-        if(d==="DNS"){ standings[drivers[i]].dns++; return;}
-        standings[d].points += pointsMap[i] || 0;
-        if(i<3) standings[d].podium++;
+    const resultsBody = document.querySelector('#results tbody');
+    const standingsBody = document.querySelector('#standings tbody');
+    resultsBody.innerHTML = '';
+    standingsBody.innerHTML = '';
+
+    // accumulate points
+    const datasets = drivers.map(d=>({label:d,data:[],fill:false,borderColor:getColor(d),tension:0.1}));
+    races.sort((a,b)=>new Date(a.date) - new Date(b.date));
+    races.forEach((race,ridx)=>{
+      const positions = [race.pos1,race.pos2,race.pos3,race.pos4,race.pos5];
+      positions.forEach((p,pos)=>{
+        if(drivers.includes(p)) {
+          standings[p].points += getPoints(pos);
+          if(pos<3) standings[p].podium++;
+        } else if(p==="DNS") {
+          // find which driver is DNS (not in positions)
+          drivers.forEach(d=>{
+            if(!positions.includes(d)) standings[d].dns++;
+          });
+        }
+      });
+      // Add row to results
+      const row = document.createElement('tr');
+      row.innerHTML = `<td>${race.date}</td><td>${race.name} (${race.track})</td><td>${race.pos1}</td><td>${race.pos2}</td><td>${race.pos3}</td><td>${race.pos4}</td><td>${race.pos5}</td>`;
+      resultsBody.appendChild(row);
+
+      // update cumulative datasets
+      drivers.forEach((d,idx)=>{
+        const prev = datasets[idx].data.length ? datasets[idx].data[datasets[idx].data.length-1] : 0;
+        datasets[idx].data.push(prev + (drivers.indexOf(d)===0 ? getPoints(0) : getPoints(positions.indexOf(d))));
       });
     });
-    return Object.entries(standings).sort((a,b)=>b[1].points - a[1].points);
+
+    // render standings table
+    drivers.forEach(d=>{
+      const row = document.createElement('tr');
+      row.innerHTML = `<td>${d}</td><td>${standings[d].points}</td><td>${standings[d].podium}</td><td>${standings[d].dns}</td>`;
+      standingsBody.appendChild(row);
+    });
+
+    // --- render chart ---
+    const ctx = document.getElementById('pointsChart').getContext('2d');
+    if(pointsChart) pointsChart.destroy();
+    pointsChart = new Chart(ctx,{
+      type:'line',
+      data:{labels:races.map(r=>r.name),datasets:datasets},
+      options:{responsive:true,plugins:{legend:{position:'bottom'}}}
+    });
   }
 
-  // --- VYPSÁNÍ TABULKY ---
-  const tbodyResults = document.querySelector('#results tbody');
-  resultsData.slice().reverse().forEach(r=>{
-    const tr = document.createElement('tr');
-    tr.innerHTML = `<td>${r.date}</td><td>${r.race} / ${r.track}</td>` +
-      r.order.map(d=>`<td>${d}</td>`).join('');
-    tbodyResults.appendChild(tr);
+  function getPoints(pos){
+    switch(pos){
+      case 0: return 10;
+      case 1: return 8;
+      case 2: return 6;
+      case 3: return 4;
+      case 4: return 2;
+      default: return 0;
+    }
+  }
+
+  function getColor(driver){
+    const colors = {Viki:'#FF0000',Mára:'#00FF00',Maty:'#0000FF',Hardy:'#FFFF00',Ondra:'#FF00FF'};
+    return colors[driver] || '#FFFFFF';
+  }
+
+  // --- FIRESTORE LISTENER ---
+  db.collection('races').orderBy('date').onSnapshot(snapshot=>{
+    const races = [];
+    snapshot.forEach(doc=>races.push({...doc.data(),id:doc.id}));
+    renderAll(races);
   });
 
-  const tbodyStandings = document.querySelector('#standings tbody');
-  function renderStandings(){
-    tbodyStandings.innerHTML="";
-    calculateStandings().forEach(([name,data])=>{
-      const tr = document.createElement('tr');
-      tr.innerHTML = `<td>${name}</td><td>${data.points}</td><td>${data.podium}</td><td>${data.dns}</td>`;
-      tbodyStandings.appendChild(tr);
-    });
-  }
-  renderStandings();
-
-  // --- GRAF BODŮ ---
-  const ctx = document.getElementById('pointsChart').getContext('2d');
-
-  function renderChart(){
-    if (window.pointsChart && typeof window.pointsChart.destroy === 'function'){
-      window.pointsChart.destroy();
-    }
-    const datasets = drivers.map(d=>{
-      return {
-        label:d,
-        data: resultsData.map(r=>{
-          const idx = r.order.indexOf(d);
-          return idx===-1 ? 0 : pointsMap[idx] || 0;
-        }),
-        borderColor: '#' + Math.floor(Math.random()*16777215).toString(16),
-        fill:false
-      };
-    });
-    window.pointsChart = new Chart(ctx,{
-      type:'line',
-      data:{labels: resultsData.map(r=>r.race), datasets},
-      options:{responsive:true, plugins:{legend:{position:'bottom'}}}
-    });
-  }
-  renderChart();
+  // --- ADMIN SAVE ---
+  document.getElementById('saveRace').addEventListener('click',()=>{
+    const newRace = {
+      date: document.getElementById('raceDate').value,
+      name: document.getElementById('raceName').value,
+      track: document.getElementById('raceTrack').value,
+      category: document.getElementById('raceCategory').value,
+      cars: document.getElementById('raceCars').value,
+      tuning: document.getElementById('raceTuning').value,
+      pitstop: document.getElementById('racePit').value,
+      tyres: document.getElementById('raceTyres').value,
+      pos1: document.getElementById('pos1').value,
+      pos2: document.getElementById('pos2').value,
+      pos3: document.getElementById('pos3').value,
+      pos4: document.getElementById('pos4').value,
+      pos5: document.getElementById('pos5').value,
+      yt: document.getElementById('raceYT').value
+    };
+    db.collection('races').add(newRace).then(()=>alert('Závod uložen')).catch(console.error);
+  });
 
 </script>
 </body>
